--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "enquire-js": "^0.2.1",
+    "firebase": "^10.3.0",
     "formik": "^2.4.2",
     "json-server": "^0.17.3",
     "rc-banner-anim": "^2.4.5",
@@ -25,16 +26,18 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-redux-firebase": "^3.11.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-firestore": "^2.0.1",
     "sass": "^1.64.1",
     "styled-components": "^6.0.3",
     "web-vitals": "^2.1.4",
     "yup": "^1.2.0"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": " PORT=3001 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts src/test",
     "eject": "react-scripts eject"
